calendar fix test
try fix cal

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ $(window).scroll( function(){
                                     </p>
                                 </div>
                                 <div class="col-xs-12 col-md-4">
-                                    <span class="addtocalendar atc-style-blue">
+                                    <span class="addtocalendar atc-style-blue" data-calendars="iCalendar, Google Calendar, Outlook">
                                                     <a class="atcb-link">Ajouter au calendrier</a>
                                                     <var class="atc_event">
                                                     <var class="atc_date_start">2016-10-18 21:00:00</var>
@@ -316,7 +316,7 @@ $(window).scroll( function(){
                                     </p>
                                 </div>
                                 <div class="col-xs-12 col-md-4">
-                                    <span class="addtocalendar atc-style-blue">
+                                    <span class="addtocalendar atc-style-blue" data-calendars="iCalendar, Google Calendar, Outlook">
                                                     <a class="atcb-link">Ajouter au calendrier</a>
                                                     <var class="atc_event">
                                                     <var class="atc_date_start">2016-10-19 21:00:00</var>
@@ -346,7 +346,7 @@ $(window).scroll( function(){
                                     </p>
                                 </div>
                                 <div class="col-xs-12 col-md-4">
-                                    <span class="addtocalendar atc-style-blue">
+                                    <span class="addtocalendar atc-style-blue" data-calendars="iCalendar, Google Calendar, Outlook">
                                                     <a class="atcb-link">Ajouter au calendrier</a>
                                                     <var class="atc_event">
                                                     <var class="atc_date_start">2016-10-20 21:00:00</var>
@@ -376,7 +376,7 @@ $(window).scroll( function(){
                                     </p>
                                 </div>
                                 <div class="col-xs-12 col-md-4">
-                                    <span class="addtocalendar atc-style-blue">
+                                    <span class="addtocalendar atc-style-blue" data-calendars="iCalendar, Google Calendar, Outlook">
                                                     <a class="atcb-link">Ajouter au calendrier</a>
                                                     <var class="atc_event">
                                                     <var class="atc_date_start">2016-10-21 21:00:00</var>
@@ -406,7 +406,7 @@ $(window).scroll( function(){
                                     </p>
                                 </div>
                                 <div class="col-xs-12 col-md-4">
-                                    <span class="addtocalendar atc-style-blue">
+                                    <span class="addtocalendar atc-style-blue" data-calendars="iCalendar, Google Calendar, Outlook">
                                                     <a class="atcb-link">Ajouter au calendrier</a>
                                                     <var class="atc_event">
                                                     <var class="atc_date_start">2016-10-22 21:00:00</var>
@@ -437,7 +437,7 @@ $(window).scroll( function(){
                                     </p>
                                 </div>
                                 <div class="col-xs-12 col-md-4">
-                                    <span class="addtocalendar atc-style-blue">
+                                    <span class="addtocalendar atc-style-blue" data-calendars="iCalendar, Google Calendar, Outlook">
                                                     <a class="atcb-link">Ajouter au calendrier</a>
                                                     <var class="atc_event">
                                                     <var class="atc_date_start">2016-11-10 20:30:00</var>
@@ -467,7 +467,7 @@ $(window).scroll( function(){
                                     </p>
                                 </div>
                                 <div class="col-xs-12 col-md-4">
-                                    <span class="addtocalendar atc-style-blue">
+                                    <span class="addtocalendar atc-style-blue" data-calendars="iCalendar, Google Calendar, Outlook">
                                                     <a class="atcb-link">Ajouter au calendrier</a>
                                                     <var class="atc_event">
                                                     <var class="atc_date_start">2016-11-11 19:00:00</var>
