--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <meta name="robots" content="index, follow">
     <meta name="keywords" content="théâtre, contemporain, art, Toulouse, Alice Tabart, spectacle, chant, danse, compagnie, mesdames a">
     <title>Compagnie Mesdames A - Théâtre contemporain Toulouse</title>
+
+<meta name="google-site-verification" content="5KhJKZQOuIzVJuw2kGENQR5YWA-Hu2F0FrGr0b3JeNg" />
+    
     <!-- Bootstrap CSS and JS
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
