--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Compagnie Mesdames A - Théâtre contemporain Toulouse</title>
 
 <meta name="google-site-verification" content="5KhJKZQOuIzVJuw2kGENQR5YWA-Hu2F0FrGr0b3JeNg" />
-    
+
     <!-- Bootstrap CSS and JS
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
@@ -288,7 +288,7 @@ $(window).scroll( function(){
                                         <span class="date-lieu">Théâtre du Grand Rond</span>&nbsp; &nbsp;<span class="date-infos-carte"> <a class="map" href="https://goo.gl/maps/HGfk8gCa6aP2">Accès</a> - <a class="reservation" href="http://www.grand-rond.org/index.php/grandrond/spectacle?Number=1459">Réservations</a></span>
                                     </p>
                                 </div>
-                                <div class="col-xs-12 col-md-4">
+                                 <div class="col-xs-12 col-md-4 text-center">
                                     <span class="addtocalendar atc-style-blue" data-calendars="iCalendar, Google Calendar, Outlook">
                                                     <a class="atcb-link">Ajouter au calendrier</a>
                                                     <var class="atc_event">
@@ -318,7 +318,7 @@ $(window).scroll( function(){
                                         <span class="date-lieu">Théâtre du Grand Rond</span>&nbsp; &nbsp;<span class="date-infos-carte"> <a class="map" href="https://goo.gl/maps/HGfk8gCa6aP2">Accès</a> - <a class="reservation" href="http://www.grand-rond.org/index.php/grandrond/spectacle?Number=1459">Réservations</a></span>
                                     </p>
                                 </div>
-                                <div class="col-xs-12 col-md-4">
+                                 <div class="col-xs-12 col-md-4 text-center">
                                     <span class="addtocalendar atc-style-blue" data-calendars="iCalendar, Google Calendar, Outlook">
                                                     <a class="atcb-link">Ajouter au calendrier</a>
                                                     <var class="atc_event">
@@ -348,7 +348,7 @@ $(window).scroll( function(){
                                         <span class="date-lieu">Théâtre du Grand Rond</span>&nbsp; &nbsp;<span class="date-infos-carte"> <a class="map" href="https://goo.gl/maps/HGfk8gCa6aP2">Accès</a> - <a class="reservation" href="http://www.grand-rond.org/index.php/grandrond/spectacle?Number=1459">Réservations</a></span>
                                     </p>
                                 </div>
-                                <div class="col-xs-12 col-md-4">
+                                 <div class="col-xs-12 col-md-4 text-center">
                                     <span class="addtocalendar atc-style-blue" data-calendars="iCalendar, Google Calendar, Outlook">
                                                     <a class="atcb-link">Ajouter au calendrier</a>
                                                     <var class="atc_event">
@@ -378,7 +378,7 @@ $(window).scroll( function(){
                                         <span class="date-lieu">Théâtre du Grand Rond</span>&nbsp; &nbsp;<span class="date-infos-carte"> <a class="map" href="https://goo.gl/maps/HGfk8gCa6aP2">Accès</a> - <a class="reservation" href="http://www.grand-rond.org/index.php/grandrond/spectacle?Number=1459">Réservations</a></span>
                                     </p>
                                 </div>
-                                <div class="col-xs-12 col-md-4">
+                                 <div class="col-xs-12 col-md-4 text-center">
                                     <span class="addtocalendar atc-style-blue" data-calendars="iCalendar, Google Calendar, Outlook">
                                                     <a class="atcb-link">Ajouter au calendrier</a>
                                                     <var class="atc_event">
@@ -408,7 +408,7 @@ $(window).scroll( function(){
                                          <span class="date-lieu">Théâtre du Grand Rond</span>&nbsp; &nbsp;<span class="date-infos-carte"> <a class="map" href="https://goo.gl/maps/HGfk8gCa6aP2">Accès</a> - <a class="reservation" href="http://www.grand-rond.org/index.php/grandrond/spectacle?Number=1459">Réservations</a></span>
                                     </p>
                                 </div>
-                                <div class="col-xs-12 col-md-4">
+                                 <div class="col-xs-12 col-md-4 text-center">
                                     <span class="addtocalendar atc-style-blue" data-calendars="iCalendar, Google Calendar, Outlook">
                                                     <a class="atcb-link">Ajouter au calendrier</a>
                                                     <var class="atc_event">
@@ -439,7 +439,7 @@ $(window).scroll( function(){
                                         <span class="date-lieu">The Cockpit Theatre</span>&nbsp; &nbsp;<span class="date-infos-carte"> <a class="map" href="https://goo.gl/maps/Fzw7ssbgBgP2">Accès</a> - <a class="reservation" href="http://tickets.thecockpit.org.uk/Sales/Shows/Voila-2016/SPECTATEURS-un-accident-de-th%C3%A9%C3%A2tre#book">Réservations</a></span>
                                     </p>
                                 </div>
-                                <div class="col-xs-12 col-md-4">
+                                 <div class="col-xs-12 col-md-4 text-center">
                                     <span class="addtocalendar atc-style-blue" data-calendars="iCalendar, Google Calendar, Outlook">
                                                     <a class="atcb-link">Ajouter au calendrier</a>
                                                     <var class="atc_event">
@@ -469,7 +469,7 @@ $(window).scroll( function(){
                                         nfos-carte">&nbsp; &nbsp;<a class="map" href="https://goo.gl/maps/Fzw7ssbgBgP2">Accès</a> - <a class="reservation" href="http://tickets.thecockpit.org.uk/Sales/Shows/Voila-2016/SPECTATEURS-un-accident-de-th%C3%A9%C3%A2tre#book">Réservations</a></span>
                                     </p>
                                 </div>
-                                <div class="col-xs-12 col-md-4">
+                                 <div class="col-xs-12 col-md-4 text-center">
                                     <span class="addtocalendar atc-style-blue" data-calendars="iCalendar, Google Calendar, Outlook">
                                                     <a class="atcb-link">Ajouter au calendrier</a>
                                                     <var class="atc_event">
@@ -905,7 +905,7 @@ Laissez-vous guider par La Bestiole et découvrez l’histoire folle des dragons
                             <br>
                         </p>
                         </div>
-                        <div class="col-xs-12 col-md-4">
+                         <div class="col-xs-12 col-md-4 text-center">
                          <div class="animation-element slide-left">
                             <img src="creations/satyre/media/images/affiche-satyre.jpg" alt="Satyre Affiche" class="img-responsive affiche-satyre"></a>
                             </div>
@@ -1338,11 +1338,13 @@ Notre but est de créer un théâtre exigeant mais abordable, ludique mais invit
                             <div id="alice-bio" class="collapse">
                                 <p class="text-center">
                                     <a data-toggle="modal" href="#modal-bio-alice">Biographie</a>
-                                    <br> </p>
+                                    <br> 
+                        
                                 <ul class="social-network social-circle">
                                     <li><a href="https://plus.google.com/102383458121799726687" class="icoGoogle" title="Google +"><i class="fa fa-google-plus"></i></a></li>
                                     <li><a href="https://fr.linkedin.com/in/alice-tabart-b0b37580" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
                                 </ul>
+                                </p>
                             </div>
                             <!-- Modal bio Alice -->
                             <div id="modal-bio-alice" class="modal fade" role="dialog">
