--- a/index.html
+++ b/index.html
@@ -1669,8 +1669,13 @@ Notre but est de créer un théâtre exigeant mais abordable&nbsp;: nos créatio
                         <li><a href="https://twitter.com/Mesdames_A" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a></li>
                     </ul>
                     </div>
-                    <p> <a class="twitter-timeline" data-theme="dark" data-link-color="#19CF86" href="https://twitter.com/Mesdames_A"  data-chrome="nofooter noborders transparent">Tweets de Mesdames_A</a></p>
+
+                    <p>
+                     <a class="twitter-timeline" data-partner="tweetdeck" data-theme="dark" href="https://twitter.com/Mesdames_A/lists/all-tweets" data-chrome="nofooter noborders transparent">Tweets de Mesdames_A</a>
+                    </p>
                      <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+
 <div class="adresse-internet">
                     <p class="text-center">
                     <a href="http://mesdames-a.fr">www.mesdames-a.fr</a>
