resize images optimise
tini isti petit jpgy

--- a/index.html
+++ b/index.html
@@ -529,6 +529,9 @@ $(function() {
                         </p>
                         <h3>Galerie</h3>
                         <div id="galspectateurs">
+                         <a href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_eau.jpg" title="Spectateur(s) - Danse" data-gallery="#blueimp-gallery-galspectateurs">
+                                <img width="130" src="creations/SPECTATEURS/media/images/sm_CIE_MESDAMES_A_2015_SPECTATEURS_eau.jpg" alt="Spectateur(s) - Bras">
+                            </a>
                             <a href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_danseuseterre1.jpg" title="Spectateur(s) - Danse" data-gallery="#blueimp-gallery-galspectateurs">
                                 <img width="130" src="creations/SPECTATEURS/media/images/sm_CIE_MESDAMES_A_2015_SPECTATEURS_danseuseterre1.jpg" alt="Spectateur(s) - Danse">
                             </a>
@@ -538,7 +541,9 @@ $(function() {
                             <a href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_palpitanteaventure.jpg" title="Spectateur(s) - Chanson" data-gallery="#blueimp-gallery-galspectateurs">
                                 <img width="130" src="creations/SPECTATEURS/media/images/sm_CIE_MESDAMES_A_2015_SPECTATEURS_palpitanteaventure.jpg" alt="Spectateur(s) - Chanson">
                             </a>
+                             <div style="display: none; ">
                             <a data-gallery="#blueimp-gallery-galspectateurs" href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_danseusetheatre.jpg" title="Spectateur(s) - Behind the scene"><img width="130" src="creations/SPECTATEURS/media/images/sm_CIE_MESDAMES_A_2015_SPECTATEURS_danseusetheatre.jpg" alt="ALT_TITLE"></a>
+                            </div>
                             <a data-gallery="#blueimp-gallery-galspectateurs" href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_all.jpg" title="Spectateur(s) - Toute la troupe"><img width="130" src="creations/SPECTATEURS/media/images/sm_CIE_MESDAMES_A_2015_SPECTATEURS_all.jpg" alt="ALT_TITLE"></a>
                             <a data-gallery="#blueimp-gallery-galspectateurs" href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_danseuseterre2.jpg" title="Spectateur(s) - Danse"><img width="130" src="creations/SPECTATEURS/media/images/sm_CIE_MESDAMES_A_2015_SPECTATEURS_danseuseterre2.jpg" alt="ALT_TITLE"></a>
                             <a data-gallery="#blueimp-gallery-galspectateurs" href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_pyramide.jpg" title="Spectateur(s) - Pyramide"><img width="130" src="creations/SPECTATEURS/media/images/sm_CIE_MESDAMES_A_2015_SPECTATEURS_pyramide.jpg" alt="ALT_TITLE"></a>
