FAVICO new logo
test

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <meta name="keywords" content="théâtre, contemporain, art, Toulouse, Alice Tabart, spectacle, chant, danse, compagnie, mesdames a">
     <title>Compagnie Mesdames A - Théâtre contemporain Toulouse</title>
     <meta name="google-site-verification" content="5KhJKZQOuIzVJuw2kGENQR5YWA-Hu2F0FrGr0b3JeNg" />
+
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<meta name="theme-color" content="#000">
+
     <!-- Bootstrap CSS and JS
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
@@ -1253,7 +1259,11 @@ $(function() {
             <br> Nos spectacles mêlent jeu, danse, musique et chant. La plupart sont basés sur une écriture originale. Nous cherchons à surprendre par notre travail sur l'espace visuel et dnas nos mises en scène inventives.<br>
             <br>
             Nous souhaitons notre théâtre populaire et le faisons aller à la rencontre de publics diversifiés.<br>
-        Notre but est de créer un théâtre exigeant mais abordable&nbsp;: nos créations invitent à la réflexion tout en restant ludiques.<br></p>
+        Notre but est de créer un théâtre exigeant mais abordable&nbsp;: nos créations invitent à la réflexion tout en restant ludiques.<br>
+        </p>
+        <p class="text-center">
+            <img id="logo" src="media/images/LogoCompagnieMaDark.svg">
+        </p>
         <p>
             <h3>Statuts de la compagnie</h3>
             <p>
