--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@ $(function() {
                             
                             <a data-gallery="#blueimp-gallery-galdragons" href="creations/dragons/media/images/Cie_Mesdames_A_Dragons_2015_magicienne2.jpg" title="La Cité des Dragons - Magicienne"><img src="creations/dragons/media/images/sm_Cie_Mesdames_A_Dragons_2015_magicienne2.jpg" alt="La Cité des Dragons - Magicienne" width="130"></a>
                               <a data-gallery="#blueimp-gallery-galdragons" href="creations/dragons/media/images/Cie_Mesdames_A_Dragons_2015_Bestioleshut.jpg" title="La Cité des Dragons - Bestiole chut"><img src="creations/dragons/media/images/sm_Cie_Mesdames_A_Dragons_2015_Bestioleshut.jpg" alt="Bestiole chut" width="130"></a>
-                             
+
                             <!-- <div style="display: none;">
                                 <a data-gallery="#blueimp-gallery-galdragons" href="creations/dragons/media/images/Cie_Mesdames_A_Dragons_2015_Bestioleshut.jpg" title="La Cité des Dragons - Bestiole chut"><img src="creations/dragons/media/images/Cie_Mesdames_A_Dragons_2015_Bestioleshut.jpg" alt="Bestiole chut" width="130"></a>
                             </div> -->
@@ -1170,9 +1170,8 @@ $(function() {
         Notre but est de créer un théâtre exigeant mais abordable&nbsp;: nos créations invitent à la réflexion tout en restant ludiques.<br>
         </p>
         <p class="text-center">
-            <img id="logo" src="media/images/LogoCompagnieMaDark.svg">
+            <img class="img-responsive" id="logo" src="media/images/LogoCompagnieMaDark.svg">
         </p>
-        <p>
             <h3>Statuts de la compagnie</h3>
             <p>
                 Télécharger les <a href="media/pdf/statuts1901-mesdames-a.pdf">statuts de la compagnie</a> (association - loi 1901).<br> Licence&nbsp;d'entrepreneur&nbsp;:&nbsp;n°&nbsp;2-1050123  &nbsp;|&nbsp;  No&nbsp;siret&nbsp;:&nbsp;539&nbsp;558&nbsp;304&nbsp;00017<br>
