--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     <title>Compagnie Mesdames A - Théâtre contemporain Toulouse</title>
     <meta name="google-site-verification" content="5KhJKZQOuIzVJuw2kGENQR5YWA-Hu2F0FrGr0b3JeNg" />
 
+
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+<link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+<link rel="manifest" href="/manifest.json">
+<meta name="theme-color" content="#000000">
+
     <!-- Bootstrap CSS and JS
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
