--- a/index.html
+++ b/index.html
@@ -293,10 +293,10 @@ $(function() {
                     <!-- liste dates -->
                     <div class="row">
                         <div class="col-xs-12 col-md-10 col-md-offset-1">
-                            <ul class="list-group prochaines-dates">
+                            <!--<ul class="list-group prochaines-dates">
                                 
                                 
-                              <!--   <li class="list-group-item">
+                                 <li class="list-group-item">
                                     <div class="row">
                                         <div class="col-xs-12 col-md-2 date-jour-mois text-center">
                                             <span class="pull-xs-right"><span class="date-jour">21</span>
@@ -326,7 +326,7 @@ $(function() {
                                             </span>
                                         </div>
                                     </div>
-                                </li> -->
+                                </li> 
                                 <li class="list-group-item">
                                     <div class="row">
                                         <div class="col-xs-12 col-md-2 date-jour-mois text-center">
@@ -358,7 +358,7 @@ $(function() {
                                         </div>
                                     </div>
                                 </li>
-                            </ul>
+                            </ul>-->
                             <ul class="list-group prochaines-dates">
                                 <li class="list-group-item">
                                     <div class="row">
