update typo date dragon revel presse

--- a/index.html
+++ b/index.html
@@ -717,13 +717,13 @@ $(function() {
                                                     <div class="item active">
                                                             <img class="img-responsive" src="creations/dragons/media/images/revue-presse/depeche-dragons-2016.jpg" alt="La Dépêche - 2016">
                                                             <div class="carousel-caption">
-                                                                01-08-2015
+                                                                La Dépêche 25-08-2016
                                                             </div>
                                                         </div>
                                                         <div class="item">
                                                             <img class="img-responsive" src="creations/dragons/media/images/revue-presse/dragon1aout2015.jpg" alt="Midi Libre">
                                                             <div class="carousel-caption">
-                                                                01-08-2015
+                                                                Midi Libre 01-08-2015
                                                             </div>
                                                         </div>
                                                         <div class="item">
