--- a/index.html
+++ b/index.html
@@ -447,25 +447,97 @@ $(function() {
                         </p>
                         <h3>Galerie</h3>
                         <div id="galspectateurs">
-                         <a href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_eau.jpg" title="Spectateur(s) - Danse" data-gallery="#blueimp-gallery-galspectateurs">
-                                <img width="130" src="creations/SPECTATEURS/media/images/sm_CIE_MESDAMES_A_2015_SPECTATEURS_eau.jpg" alt="Spectateur(s) - Bras">
+                            <a href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_eau.jpg" title="Spectateur(s) - Bras" data-gallery="#blueimp-gallery-galspectateurs">
+                            <img width="130" src="creations/SPECTATEURS/media/images/sm_CIE_MESDAMES_A_2015_SPECTATEURS_eau.jpg" alt="Spectateur(s) - Bras">
                             </a>
+
                             <a href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_danseuseterre1.jpg" title="Spectateur(s) - Danse" data-gallery="#blueimp-gallery-galspectateurs">
                                 <img width="130" src="creations/SPECTATEURS/media/images/sm_CIE_MESDAMES_A_2015_SPECTATEURS_danseuseterre1.jpg" alt="Spectateur(s) - Danse">
                             </a>
+
+                             <a href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2016_SPECTATEURS_3_ponts_par_Fanny_Moulin_danse_Inde.jpg" title="Spectateur(s) - Danse Inde. Crédit photo&nbsp;: Fanny Moulin" data-gallery="#blueimp-gallery-galspectateurs">
+                            <img width="130" src="creations/SPECTATEURS/media/images/sm_CIE_MESDAMES_A_2016_SPECTATEURS_3_ponts_par_Fanny_Moulin_danse_Inde.jpg" alt="Spectateur(s) - Danse Inde">
+                            </a>
+
+                            <a href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2016_SPECTATEURS_3_ponts_par_Fanny_Moulin_3621c.jpg" title="Spectateur(s) - Lucas. Crédit photo&nbsp;: Fanny Moulin" data-gallery="#blueimp-gallery-galspectateurs">
+                            <img width="130" src="creations/SPECTATEURS/media/images/sm_CIE_MESDAMES_A_2016_SPECTATEURS_3_ponts_par_Fanny_Moulin_3621c.jpg" alt="Spectateur(s) - Lucas">
+                            </a>
+
+                            <a data-gallery="#blueimp-gallery-galspectateurs" href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_all.jpg" title="Spectateur(s) - Toute la troupe"><img width="130" src="creations/SPECTATEURS/media/images/sm_CIE_MESDAMES_A_2015_SPECTATEURS_all.jpg" alt="Spectateur(s) - Troupe"></a>
+
+                            <a data-gallery="#blueimp-gallery-galspectateurs" href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_danseuseterre2.jpg" title="Spectateur(s) - Danse"><img width="130" src="creations/SPECTATEURS/media/images/sm_CIE_MESDAMES_A_2015_SPECTATEURS_danseuseterre2.jpg" alt="Spectateur(s) - Danse"></a>
+
+
+                            <a href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2016_SPECTATEURS_3_ponts_par_Fanny_Moulin_Simon_toge.jpg" title="Spectateur(s) - Simon toge. Crédit photo&nbsp;: Fanny Moulin" data-gallery="#blueimp-gallery-galspectateurs">
+                            <img width="130" src="creations/SPECTATEURS/media/images/sm_CIE_MESDAMES_A_2016_SPECTATEURS_3_ponts_par_Fanny_Moulin_Simon_toge.jpg" alt="Spectateur(s) - Simon_toge">
+                            </a>
+
+                            <a data-gallery="#blueimp-gallery-galspectateurs" href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_Journalistes.jpg" title="Spectateur(s) - Journalistes"><img width="130" src="creations/SPECTATEURS/media/images/sm_CIE_MESDAMES_A_2015_SPECTATEURS_Journalistes.jpg" alt="Spectateur(s) - Journalistes"></a>
+
+                            <a href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2016_SPECTATEURS_3_ponts_par_Fanny_Moulin_Coline-Lucas.jpg" title="Spectateur(s) - Coline et Lucas. Crédit photo&nbsp;: Fanny Moulin" data-gallery="#blueimp-gallery-galspectateurs">
+                            <img width="130" src="creations/SPECTATEURS/media/images/sm_CIE_MESDAMES_A_2016_SPECTATEURS_3_ponts_par_Fanny_Moulin_Coline-Lucas.jpg" alt="Spectateur(s) - Coline et Lucas">
+                            </a>
+
+                            <a href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2016_SPECTATEURS_3_ponts_par_Fanny_Moulin_Elsa_cercle.jpg" title="Spectateur(s) - Cercle. Crédit photo&nbsp;: Fanny Moulin" data-gallery="#blueimp-gallery-galspectateurs">
+                            <img width="130" src="creations/SPECTATEURS/media/images/sm_CIE_MESDAMES_A_2016_SPECTATEURS_3_ponts_par_Fanny_Moulin_Elsa_cercle.jpg" alt="Spectateur(s) - Elsa_cercle">
+                            </a>
+
+                        </div>
+                            <br>
+
+                           <p> <a href="#equipe-crea-spectateurs-collapse" data-toggle="collapse">Plus d'infos&nbsp;et&nbsp;d'images&nbsp;<i class="fa fa-caret-down" aria-hidden="true"></i></a>.</p>
+                        <div id="equipe-crea-spectateurs-collapse" class="collapse">
+
+                        <div id="galspectateurs">
+                         <div style="display: none;">
+                            <a data-gallery="#blueimp-gallery-galspectateurs" href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_danseusetheatre.jpg" title="Spectateur(s) - Behind the scene"><img width="130" src="creations/SPECTATEURS/media/images/sm_CIE_MESDAMES_A_2015_SPECTATEURS_danseusetheatre.jpg" alt="Spectateur(s) - "></a>
+                            </div>
+
+                            <a href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2016_SPECTATEURS_3_ponts_par_Fanny_Moulin_Map_Monde.jpg" title="Spectateur(s) - Carte Monde. Crédit photo&nbsp;: Fanny Moulin" data-gallery="#blueimp-gallery-galspectateurs">
+                            <img width="130" src="creations/SPECTATEURS/media/images/sm_CIE_MESDAMES_A_2016_SPECTATEURS_3_ponts_par_Fanny_Moulin_Map_Monde.jpg" alt="Spectateur(s) - Map_Monde">
+                            </a>
+
+                            <a href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2016_SPECTATEURS_3_ponts_par_Fanny_Moulin_Simon-Lucas_explication.jpg" title="Spectateur(s) - Simon et Lucas explication. Crédit photo&nbsp;: Fanny Moulin" data-gallery="#blueimp-gallery-galspectateurs">
+                            <img width="130" src="creations/SPECTATEURS/media/images/sm_CIE_MESDAMES_A_2016_SPECTATEURS_3_ponts_par_Fanny_Moulin_Simon-Lucas_explication.jpg" alt="Spectateur(s) - Simon-Lucas_explication">
+                            </a>
+
+                            <a href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2016_SPECTATEURS_3_ponts_par_Fanny_Moulin_3646.jpg" title="Spectateur(s) - . Crédit photo&nbsp;: Fanny Moulin" data-gallery="#blueimp-gallery-galspectateurs">
+                            <img width="130" src="creations/SPECTATEURS/media/images/sm_CIE_MESDAMES_A_2016_SPECTATEURS_3_ponts_par_Fanny_Moulin_3646.jpg" alt="Spectateur(s) - ">
+                            </a>
+
+                            <a href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2016_SPECTATEURS_3_ponts_par_Fanny_Moulin_3660.jpg" title="Spectateur(s) - . Crédit photo&nbsp;: Fanny Moulin" data-gallery="#blueimp-gallery-galspectateurs">
+                            <img width="130" src="creations/SPECTATEURS/media/images/sm_CIE_MESDAMES_A_2016_SPECTATEURS_3_ponts_par_Fanny_Moulin_3660.jpg" alt="Spectateur(s) - ">
+                            </a>
+
+                            <a href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2016_SPECTATEURS_3_ponts_par_Fanny_Moulin_3663.jpg" title="Spectateur(s) - . Crédit photo&nbsp;: Fanny Moulin" data-gallery="#blueimp-gallery-galspectateurs">
+                            <img width="130" src="creations/SPECTATEURS/media/images/sm_CIE_MESDAMES_A_2016_SPECTATEURS_3_ponts_par_Fanny_Moulin_3663.jpg" alt="Spectateur(s) - ">
+                            </a>
+
+                            <a href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2016_SPECTATEURS_3_ponts_par_Fanny_Moulin_3685.jpg" title="Spectateur(s) - . Crédit photo&nbsp;: Fanny Moulin" data-gallery="#blueimp-gallery-galspectateurs">
+                            <img width="130" src="creations/SPECTATEURS/media/images/sm_CIE_MESDAMES_A_2016_SPECTATEURS_3_ponts_par_Fanny_Moulin_3685.jpg" alt="Spectateur(s) - ">
+                            </a>
+
+                            <a href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2016_SPECTATEURS_3_ponts_par_Fanny_Moulin_3691.jpg" title="Spectateur(s) - . Crédit photo&nbsp;: Fanny Moulin" data-gallery="#blueimp-gallery-galspectateurs">
+                            <img width="130" src="creations/SPECTATEURS/media/images/sm_CIE_MESDAMES_A_2016_SPECTATEURS_3_ponts_par_Fanny_Moulin_3691.jpg" alt="Spectateur(s) - ">
+                            </a>
+
+                            <a href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2016_SPECTATEURS_3_ponts_par_Fanny_Moulin_3718b.jpg" title="Spectateur(s) - . Crédit photo&nbsp;: Fanny Moulin" data-gallery="#blueimp-gallery-galspectateurs">
+                            <img width="130" src="creations/SPECTATEURS/media/images/sm_CIE_MESDAMES_A_2016_SPECTATEURS_3_ponts_par_Fanny_Moulin_3718b.jpg" alt="Spectateur(s) - ">
+                            </a>
+
+                            <a href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2016_SPECTATEURS_3_ponts_par_Fanny_Moulin_3861.jpg" title="Spectateur(s) - . Crédit photo&nbsp;: Fanny Moulin" data-gallery="#blueimp-gallery-galspectateurs">
+                            <img width="130" src="creations/SPECTATEURS/media/images/sm_CIE_MESDAMES_A_2016_SPECTATEURS_3_ponts_par_Fanny_Moulin_3861.jpg" alt="Spectateur(s) - ">
+                            </a>
+
+                            <a data-gallery="#blueimp-gallery-galspectateurs" href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_pyramide.jpg" title="Spectateur(s) - Pyramide"><img width="130" src="creations/SPECTATEURS/media/images/sm_CIE_MESDAMES_A_2015_SPECTATEURS_pyramide.jpg" alt="Spectateur(s) - Pyramide"></a>
+                            
                             <a href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_CartonMoliere.jpg" title="Spectateur(s) - Carton N&amp;B" data-gallery="#blueimp-gallery-galspectateurs">
                                 <img width="130" src="creations/SPECTATEURS/media/images/sm_CIE_MESDAMES_A_2015_SPECTATEURS_CartonMoliere.jpg" alt="Spectateur(s) - Carton N&amp;B">
                             </a>
-                            <a href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_palpitanteaventure.jpg" title="Spectateur(s) - Chanson" data-gallery="#blueimp-gallery-galspectateurs">
-                                <img width="130" src="creations/SPECTATEURS/media/images/sm_CIE_MESDAMES_A_2015_SPECTATEURS_palpitanteaventure.jpg" alt="Spectateur(s) - Chanson">
+
+                             <a href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_palpitanteaventure.jpg" title="Spectateur(s) - Chanson" data-gallery="#blueimp-gallery-galspectateurs">
+                            <img width="130" src="creations/SPECTATEURS/media/images/sm_CIE_MESDAMES_A_2015_SPECTATEURS_palpitanteaventure.jpg" alt="Spectateur(s) - Chanson">
                             </a>
-                             <div style="display: none;">
-                            <a data-gallery="#blueimp-gallery-galspectateurs" href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_danseusetheatre.jpg" title="Spectateur(s) - Behind the scene"><img width="130" src="creations/SPECTATEURS/media/images/sm_CIE_MESDAMES_A_2015_SPECTATEURS_danseusetheatre.jpg" alt="Spectateur(s) - "></a>
-                            </div>
-                            <a data-gallery="#blueimp-gallery-galspectateurs" href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_all.jpg" title="Spectateur(s) - Toute la troupe"><img width="130" src="creations/SPECTATEURS/media/images/sm_CIE_MESDAMES_A_2015_SPECTATEURS_all.jpg" alt="Spectateur(s) - Troupe"></a>
-                            <a data-gallery="#blueimp-gallery-galspectateurs" href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_danseuseterre2.jpg" title="Spectateur(s) - Danse"><img width="130" src="creations/SPECTATEURS/media/images/sm_CIE_MESDAMES_A_2015_SPECTATEURS_danseuseterre2.jpg" alt="Spectateur(s) - Danse"></a>
-                            <a data-gallery="#blueimp-gallery-galspectateurs" href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_pyramide.jpg" title="Spectateur(s) - Pyramide"><img width="130" src="creations/SPECTATEURS/media/images/sm_CIE_MESDAMES_A_2015_SPECTATEURS_pyramide.jpg" alt="Spectateur(s) - Pyramide"></a>
-                            <a data-gallery="#blueimp-gallery-galspectateurs" href="creations/SPECTATEURS/media/images/CIE_MESDAMES_A_2015_SPECTATEURS_Journalistes.jpg" title="Spectateur(s) - Journalistes"><img width="130" src="creations/SPECTATEURS/media/images/sm_CIE_MESDAMES_A_2015_SPECTATEURS_Journalistes.jpg" alt="Spectateur(s) - Journalistes"></a>
                         </div>
                         <script>
                         blueimp.Gallery(
@@ -475,10 +547,6 @@ $(function() {
                             }
                         );
                         </script>
-                        <p>
-                            <br>
-                            <a href="#equipe-crea-spectateurs-collapse" data-toggle="collapse">Plus d'infos&nbsp;<i class="fa fa-caret-down" aria-hidden="true"></i></a>.</p>
-                        <div id="equipe-crea-spectateurs-collapse" class="collapse">
                                 <h3>Équipe de création</h3>
                                 <p class="equip-crea">
                                     <span class="label-equipe-crea">Écriture, mise en scène &amp; costumes /</span> Alice Tabart
@@ -519,6 +587,12 @@ $(function() {
                                                             <img class="img-responsive" src="creations/SPECTATEURS/media/images/revue-presse/LeBrigadier.jpg" alt="Le Brigadier">
                                                             <div class="carousel-caption">
                                                                 Le Brigadier, revue des Arts de la scène
+                                                            </div>
+                                                        </div>
+                                                        <div class="item">
+                                                            <img class="img-responsive" src="creations/SPECTATEURS/media/images/revue-presse/Le_clou_dans_la_planche_octobre_2016_Suzanne_Beaujour.jpg" alt="...">
+                                                            <div class="carousel-caption">
+                                                                Le clou dans la planche - Octobre 2016 par Suzanne Beaujour
                                                             </div>
                                                         </div>
                                                         <div class="item">
