--- a/index.html
+++ b/index.html
@@ -283,17 +283,18 @@ $(function() {
                     </script>
                 </div>
             </div>
-            <div class="row">
+            <!--<div class="row">
                 <div class="col-xs-10 col-xs-offset-1 col-lg-8 col-lg-offset-2">
                     <h1>Actualités et dates</h1>
                     <p>Après avoir partagé <i>La Cité des Dragons</i> avec près de 1000 spectateurs cet été, la Compagnie Mesdames A joue <i><a href="#spectateurs">SPECTATEUR(S)</a>...</i> dans sa nouvelle distribution.
                     </p>
-                    <h3>Dates pour <i>SPECTATEUR(S), un accident de théâtre</i></h3>
-                    <br>
+                    -->
+                    <!--<h3>Dates pour <i>SPECTATEUR(S), un accident de théâtre</i></h3>
+                    <br>-->
                     <!-- liste dates -->
-                    <div class="row">
+                    <!--<div class="row">
                         <div class="col-xs-12 col-md-10 col-md-offset-1">
-                            <!--<ul class="list-group prochaines-dates">
+                            <ul class="list-group prochaines-dates">
                                 
                                 
                                  <li class="list-group-item">
@@ -358,7 +359,7 @@ $(function() {
                                         </div>
                                     </div>
                                 </li>
-                            </ul>-->
+                            </ul>
                             <ul class="list-group prochaines-dates">
                                 <li class="list-group-item">
                                     <div class="row">
@@ -424,8 +425,9 @@ $(function() {
                             </ul>
                         </div>
                     </div>
-                </div>
-            </div>
+                    -->
+                <!--</div>
+            </div>-->
         </div>
     </section>
     <!-- Creation Section -->
