Fix tweet limit

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ $(function() {
                     <p>La <i>Cité des Dragons</i> sera de retour en juillet et août 2017.<br>
                     En attendant, la Compagnie travaille sur sa nouvelle création&nbsp;: <i>Éclairs</i> .
                     </p>
-                    <p> <a class="twitter-timeline" data-theme="dark" href="https://twitter.com/Mesdames_A"  data-chrome="nofooter noborders transparent" data-limit="3" data-show-replies="false">Nos tweets récents</a></p>
+                    <p> <a class="twitter-timeline" data-theme="dark" href="https://twitter.com/Mesdames_A"  data-chrome="nofooter noborders transparent" data-tweet-limit="3" data-show-replies="false">Nos tweets récents</a></p>
     <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
                     
                     <h3>Dates 2017 pour la <i>La Cité des Dragons</i></h3>
