Fix CSS space nav li
Fix CSS space nav li
Et texte adhesion

--- a/index.html
+++ b/index.html
@@ -230,19 +230,18 @@ $(function() {
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                        <h4 class="modal-title">Nous soutenir - plus d'infos</h4>
+                                        <h4 class="modal-title">Nous soutenir - Info &amp; adhésion</h4>
                                     </div>
                                     <div class="modal-body dates-passees">
                                         <p class="reduction-dimpots">
-                                            Si vous souhaitez nous soutenir, le <b><a href="media/pdf/bulletin-adhesion-mesdames-a.pdf">bulletin d'adhésion</a></b> vous permettra de devenir membre de la compagnie.
+                                            Vous pouvez devenir membre de la compagnie et nous soutenir en utilisant le <b><a href="media/pdf/bulletin-adhesion-mesdames-a.pdf">bulletin d'adhésion</a></b>.<br>
+                                            Merci!
                                             <br>
                                             <br>
-                                            <i>Info</i>: Si vous êtes imposables, vos dons ouvrent droit à une réduction d'impôts...
-                                            <br> Cochez la case dans le bulletin d'adhésion et nous vous enverrons un reçu fiscal.
-                                            <br>
-                                            <br>
-                                            <small>66% du montant de vos dons est déductible d'impôts (dans la limite de 20% de votre revenu imposable).
-                                                Par exemple après impots, un don de 35€ revient à moins de 12€.</small></p>
+                                            <small>
+                                            <i>Info</i>: Si vous êtes imposables, vos dons ouvrent droit à une réduction d'impôts.<br>
+                                            Par exemple&nbsp;: après impots, un don de 35€ revient à moins de 12€.<br>
+                                                </small></p>
                                     </div>
                                 </div>
                             </div>
@@ -1705,11 +1704,15 @@ $(function() {
 <div class="row">
 <div class="col-xs-10 col-xs-offset-1 col-lg-8 col-lg-offset-2">
     <h1>Contact</h1>
-    <p>
+    
         <!--                     <i class="fa fa-envelope" aria-hidden="true"></i>
-        -->                    Par e-mail&nbsp;: cie.mesdames.a&nbsp;{at}&nbsp;gmail.com <br>
-        <br>
-    Ou en utilisant le formulaire suivant&nbsp;:</p>
+        -->
+        <p> Vous pouvez nous contacter&nbsp;:<br></p>
+    <ul class="production">
+    <li>par mail&nbsp;: &nbsp;&nbsp;<i class="fa fa-envelope" aria-hidden="true"></i>&nbsp;&nbsp;cie.mesdames.a&nbsp;{at}&nbsp;gmail.com <br>
+    </li>
+    <li>ou en utilisant le formulaire suivant&nbsp;:</li>
+    <br>
     <form method="POST" action="http://formspree.io/cie.mesdames.a@gmail.com">
         <input class="field-mail" type="email" name="email" placeholder="Votre adresse email"><br>
         <br>
@@ -1720,7 +1723,9 @@ $(function() {
         <input type="hidden" name="_subject" value="Compagnie Mesdames A" />
         <input type="text" name="_gotcha" style="display:none" />
     </form>
-    <p><br>
+    </ul>
+     <br>
+    <p>
         Retrouvez nous aussi sur les réseaux sociaux&nbsp;:<br>
     </p>
     <div class="logo-contact">
