Fix date Eclairs

--- a/index.html
+++ b/index.html
@@ -293,6 +293,8 @@ $(function() {
                     
 
                     <br>
+                     <h3>Lecture publique - <i>Éclairs</i></h3>
+
                      <div class="row">
                         <div class="col-xs-12 col-md-10 col-md-offset-1">
                             <ul class="list-group prochaines-dates">
@@ -306,7 +308,7 @@ $(function() {
                                         </div>
                                         <div class="col-xs-12 col-md-6">
                                             <p class="date">
-                                                <span class="date-lieu">TOULOUSE</span> - <span class="date-date"> 23 mars</span> à
+                                                <span class="date-lieu">TOULOUSE</span> - <span class="date-date">jeudi 23 mars</span> à
                                                 <span class="date-heure">19h30</span>
                                                 <br>
                                                 <span class="date-lieu">MJC des Amidonniers</span>&nbsp; &nbsp;<span class="date-infos-carte"> <a class="map" href="https://goo.gl/maps/grVhZHXqRsB2">Accès</a> - <a class="reservation" href="https://www.facebook.com/events/1364059656988110/">Informations</a></span>
@@ -319,7 +321,7 @@ $(function() {
                                                 <var class="atc_date_start">2017-03-23 19:30:00</var>
                                                 <var class="atc_date_end">2017-03-23 21:00:00</var>
                                                 <var class="atc_timezone">Europe/Paris</var>
-                                                <var class="atc_title">La Cité des Dragons</var>
+                                                <var class="atc_title">Lecture publique - Éclairs</var>
                                                 <var class="atc_description">Lecture publique https://www.facebook.com/events/1364059656988110/
                                                 </var>
                                                 <var class="atc_location">Toulouse - MJC des Amidonniers</var>
