--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ $(function() {
                             <p class="intro-text center-block">
                                 La Compagnie Mesdames A propose un théâtre contemporain faisant discuter jeu, danse et musique sur scène.
                                 <br>
-                                <br> Découvrez notre derniere création:&nbsp;<i><a href="#spectateurs">SPECTATEUR(S), un accident de théâtre</a></i>.
+                                <br> Découvrez <a class="page-scroll link-nav" href="#actu">nos dernières actualités</a>.
                             </p>
                         </div>
                         <div class="col-xs-12 col-sm-3 col-lg-3 center-block">
