remove date lecture

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@ $(function() {
                     
 
                     <br>
-                     <h3>Lecture publique - <i>Éclairs</i></h3>
+<!--                      <h3>Lecture publique - <i>Éclairs</i></h3>
 
                      <div class="row">
                         <div class="col-xs-12 col-md-10 col-md-offset-1">
@@ -334,7 +334,7 @@ $(function() {
                                 </li>  
                                 </ul>
                                 </div>
-                                </div>
+                                </div> -->
 
 
                     <h3>Dates 2017 pour la <i>La Cité des Dragons</i></h3>
