test tweet width
test tweet width

--- a/index.html
+++ b/index.html
@@ -288,8 +288,12 @@ $(function() {
                     <p>La <i>Cité des Dragons</i> sera de retour en juillet et août 2017.<br>
                     En attendant, la Compagnie travaille sur sa nouvelle création&nbsp;: <i>Éclairs</i> .
                     </p>
-                    <p> <a class="twitter-timeline" data-theme="dark" href="https://twitter.com/Mesdames_A"  data-chrome="nofooter noborders transparent" data-tweet-limit="3" data-show-replies="false" data-width="420">Nos tweets récents</a></p>
+                     <div class="row">
+                <div class="col-xs-10 col-xs-offset-1 col-lg-6 col-lg-offset-3">
+                    <p> <a class="twitter-timeline" data-theme="dark" href="https://twitter.com/Mesdames_A"  data-chrome="nofooter noborders transparent" data-tweet-limit="3" data-show-replies="false">Nos tweets récents</a></p>
     <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+    </div>
+    </div>
                     
 
                     <br>
@@ -1140,7 +1144,7 @@ $(function() {
                                                         </div>
                                                     </div>
                                                     <div class="item">
-                                                        <img class="img-responsive" src="creations/satyre/media/images/revue-presse/MidiLibre-22-aout-2012-Michel-Molinié.jpg" alt="...">
+                                                        <img class="img-responsive" src="creations/satyre/media/images/revue-presse/MidiLibre-22-aout-2012-Michel-Molinié.jpg" alt="...">
                                                         <div class="carousel-caption">
                                                             Midi Libre - Aout 2012- par Michel Molinié
                                                         </div>
