--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ $(function() {
                     En attendant, la Compagnie travaille sur sa nouvelle création&nbsp;: <i>Éclairs</i> .
                     </p>
                      <div class="row">
-                <div class="col-xs-10 col-xs-offset-1 col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
+                <div class="col-xs-12 col-md-9 col-lg-6">
                     <p> <a class="twitter-timeline" data-theme="dark" href="https://twitter.com/Mesdames_A"  data-chrome="nofooter noborders transparent" data-tweet-limit="3" data-show-replies="false">Nos tweets récents</a></p>
     <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
